2011-11-28 Aleksandar Stojsavljevic
  * Verifier: If certificate is successfully validated against CRL - don't set warning flag for OCSP

2011-11-23 Josef Cacek
  * if PDF version update is not possible, show eror message and don't sign 
  * print stacktrace if PKCS11 provider initialization fails

2011-11-18 Josef Cacek (1.2.3)
  * fix CLI - the "append mode" for signatures was used always

2011-11-16 Josef Cacek (1.2.2)
  * exit codes improved in CLI
    EXIT_CODE_PARSE_ERR = 1 (command line in a wrong format)
    EXIT_CODE_NO_COMMAND = 2 (nothing to do - e.g. no file for signing provided)
    EXIT_CODE_SOME_SIG_FAILED = 3 (signing of some - but not all - files failed) 
    EXIT_CODE_ALL_SIG_FAILED = 4 (signing of all files failed)

2011-11-12 Josef Cacek (1.2.1)
  * updated French translations (thanks David)
  * better handling of misconfigured keystore (https://sourceforge.net/projects/jsignpdf/forums/forum/782217/topic/4802421)
  * chapter "Changing the application language" added to the documentation

2011-10-26 Josef Cacek (1.2.0)
  * fixed illegal enum initial values in property file

2011-10-18 Josef Cacek
  * added French translation (thanks to David Ruelle)

2011-08-03 Josef Cacek
  * fix OpenOffice.org/LibreOffice toolbar naming (problem reported by Zbig Wittmann)

2011-08-02 Josef Cacek
  * contact field specified from command line (tracker#3304993)
  * Polish translation from Zbig Wittmann added

2011-07-01 Josef Cacek (1.1.10 test)
  * new command line tool added: SignatureCounter
  * fixed wrong spelling of RenderMode.DESCRIPTION_ONLY enum instance (thanks to Jiri Lisicky for reporting)

2011-04-28 Aleksandar Stojsavljevic
  * Verifier: Improved verification (added new validation codes for certificate status)
  * Verifier: SignatureVerification class now holds signing certificate and certificate path

2011-04-28 Aleksandar Stojsavljevic
  * Verifier: verification is now possible against content of pdf (file doesn't have to be on file system).
